WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
184847
AX: AOM does not work with DOM Level 1 events
https://bugs.webkit.org/show_bug.cgi?id=184847
Summary
AX: AOM does not work with DOM Level 1 events
Nan Wang
Reported
2018-04-20 15:47:05 PDT
AOM does not work with DOM Level 1 events, only works with DOM Level 2. <
rdar://problem/39477642
>
Attachments
patch
(17.20 KB, patch)
2018-04-20 16:05 PDT
,
Nan Wang
cfleizach
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Nan Wang
Comment 1
2018-04-20 16:05:12 PDT
Created
attachment 338481
[details]
patch
chris fleizach
Comment 2
2018-04-20 16:19:53 PDT
there's probably some other tests that would need updating. do these need to be gated by feature flag?
Nan Wang
Comment 3
2018-04-20 16:25:14 PDT
(In reply to chris fleizach from
comment #2
)
> there's probably some other tests that would need updating. do these need to > be gated by feature flag?
I think these tests have covered all the accessibility event types we currently have. I'll double check with the feature flag.
Ryosuke Niwa
Comment 4
2018-04-20 16:31:44 PDT
Comment on
attachment 338481
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=338481&action=review
> LayoutTests/accessibility/mac/AOM-events-all.html:118 > - debug("\nTest accessiblescrollintoview"); > + debug("\nTest accessiblescrollintoview");
Trailing whitespace.
Nan Wang
Comment 5
2018-04-20 23:49:28 PDT
(In reply to Ryosuke Niwa from
comment #4
)
> Comment on
attachment 338481
[details]
> patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=338481&action=review
> > > LayoutTests/accessibility/mac/AOM-events-all.html:118 > > - debug("\nTest accessiblescrollintoview"); > > + debug("\nTest accessiblescrollintoview"); > > Trailing whitespace.
Ok will remove
Nan Wang
Comment 6
2018-04-20 23:56:31 PDT
Committed
r230890
: <
https://trac.webkit.org/changeset/230890
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug