AX: AOM does not work with DOM Level 1 events https://bugs.webkit.org/show_bug.cgi?id=184847

Reviewed by Chris Fleizach.

Source/WebCore:

Added the accessibility events to the HTML attribute names.

Test cases are added to the existing layout tests.

* html/HTMLAttributeNames.in:
* html/HTMLElement.cpp:
(WebCore::HTMLElement::createEventHandlerNameMap):

LayoutTests:

* accessibility/ios-simulator/AOM-dismiss-event-expected.txt:
* accessibility/ios-simulator/AOM-dismiss-event.html:
* accessibility/mac/AOM-event-accessiblesetvalue-expected.txt:
* accessibility/mac/AOM-event-accessiblesetvalue.html:
* accessibility/mac/AOM-events-all-expected.txt:
* accessibility/mac/AOM-events-all.html:
* accessibility/mac/AOM-events-expected.txt:
* accessibility/mac/AOM-events.html:


Canonical link: https://commits.webkit.org/200366@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@230890 268f45cc-cd09-0410-ab3c-d52691b4dbfc